[project]
name = "code-analysis-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for codebase analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.1",
    "pathspec>=0.12.1",
]

[project.scripts]
code-analysis = "main:main"
